k8s/thoas_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: thoas-server-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: thoas-server
    spec:
      imagePullSecrets:
        - name: thoas-server-pull-secret
      containers:
        - name: thoas-server
          image: <DOCKER_IMAGE>
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          command: ["uvicorn"]
          args: [
            "--host",
            "0.0.0.0",
            "--port",
            "8000",
            "--env-file",
            "/conf/.env",
            "graphql_service.server:app"
          ]
          volumeMounts:
            - mountPath: /conf/mongo.conf
              name: thoas-configmap
            - mountPath: /conf/.env
              name: thoas-config-location
      volumes:
        - name: thoas-configmap
          configMap:
            name: thoas-configmap
        - name: thoas-config-location
          configMap:
            name: thoas-config-location
