k8s/external_mongo_endpoint.yaml
apiVersion: v1
kind: Endpoints
# Target for MongoDB traffic from inside k8s
# Note the name matches the Service
metadata:
  name: mongo
subsets:
  - addresses:
      - ip: 10.7.51.44
    ports:
      - port: 27017
