k8s/external_mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: thoas-mongo-svc
  namespace: ensembl-apps
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
