k8s/mongo_headles_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: thoas-mongodb-svc
 labels:
   name: database
spec:
 ports:
 - port: 27017
   targetPort: 27017
 clusterIP: None
 selector:
   app: database
