k8s/dodgy_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ensembl-thoas-ingress-alex
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#rate-limiting
    # nginx.ingress.kubernetes.io/limit-rpm: "2"
spec:
  rules:
  - host: alex-thoas.ensembl.org
    http:
      paths:
      - backend:
          serviceName: thoas-server-svc
          servicePort: 8000
        path: /
